2006-04-17  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (get_folder): Removed a "full stop" from 
	the error string. Fixes #306116.

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO.
	* po/no.po: And the translation.

2006-04-10  Sushma Rai  <rsushma@novell.com>

	* docs/reference/gtk-doc.make: Creating the target docs directory
	only if the source directory is not empty. Fixes #334925.
	Patch submitted by "Jeremy Messenger <mezz@FreeBSD.org>"

2006-04-04  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object):
	Initialize variables location and ru_header to NULL.

	* mail/mail-stub-exchange.c (append_message): Similar.
	Fixes #334391.

2006-03-30  Rhys Jones  <rhys@sucs.org>

	* configure.in: Added Welsh (cy) to ALL_LINGUAS.

2006-03-22  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-13  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.6.0
	* NEWS : Updated

2006-03-06  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c 
	(check_owner_partstatus_for_declined): Check for NULL ical property.
	Fixes #323990.

2006-03-06  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #333603.
	* calendar/e-cal-backend-exchange.c:
	(set_mode): Notify the client to authenticate only when
	the mode is changed from offline to online.

2006-03-06  Sushma Rai  <rsushma@novell.com>

	* po/POTFILES.in : Removed the non existing files. 
	Fixes #317432. Patch submitted by Sebastien Bacher <seb128@debian.org>.

2006-03-06  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (update_foreign_uri): Using 
	e_xml_destroy_hash() to free the xml hash, instead of 
	g_hash_table_destroy(). See #329251.

2006-03-06  Sushma Rai  <rsushma@novell.com>
	
	* calendar/e-cal-backend-exchange-tasks.c (create_task_object): Freeing
	from address and names. 
