@@ -1,3 +1,13 @@
+2006-04-18  Chenthill Palanisamy  <pchenthill@novell.com>
+
+	Fixes #334900
+	* calendar/e-cal-backend-exchange-calendar.c: (receive_objects):
+	Do not remove the instance as exception would be set in the method
+	modify_object.
+	* calendar/e-cal-backend-exchange.c:
+	(e_cal_backend_exchange_modify_object):Set the exception alone instead
+	of removing the instance.
+
 2006-04-17  Sushma Rai  <rsushma@novell.com>
 
 	* mail/mail-stub-exchange.c (get_folder): Removed a "full stop" from 
